# Easy-code

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_server.py
docs/: agent-team-design.md  function-calling-design.md  orchestrator-design.md  project-structure.md  rag-design.md  requirements.md  skills-design.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/api/: chat.js
frontend/src/components/: ChatInterface.vue
src/: __init__.py
src/agent/: __init__.py  intent.py  models.py  react_agent.py  team.py
src/api/: __init__.py  app.py  main.py
src/api/v1/: chat.py  health.py  mcp.py  tools.py
src/config/: __init__.py  prompts.py  settings.py
src/context/: __init__.py  compressor.py  manager.py
src/data/: __init__.py  document.py  graph.py  vector.py
src/mcp/: __init__.py  adapter.py  client.py  errors.py  models.py
src/observability/: __init__.py  metrics.py  trace.py
src/rag/: __init__.py  config.py  extractors.py  models.py
src/rag/chunkers/: __init__.py
src/rag/embeddings/: __init__.py
src/rag/parsers/: __init__.py
src/rag/retrievers/: __init__.py
src/rag/stores/: __init__.py  graph.py
src/skills/: __init__.py  skill.py
src/tools/: __init__.py  engine.py  errors.py  executor.py  models.py  planner.py  registry.py
src/tools/builtin/: __init__.py
src/utils/: __init__.py  llm.py
tests/: test_chat_api.py  test_function_calling.py  test_intent_integration.py  test_mcp.py  test_react_agent.py
